styled sign up page, fixed truncation issue

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+html {
+  overscroll-behavior: none;
+}
+
 header {
   margin-bottom: 20px;
   background-color: black;
@@ -51,9 +55,6 @@ body {
 }
 
 .card-text {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   max-width: 250px;
 }
 
